--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -136,10 +136,10 @@ function loadJS(url, data, onDone, onError) {
 }
 
 
-function focuserMove(direction, step) {
+function focuserMove(direction, degrees) {
     var data = {
         "DIRECTION" : direction,
-        "STEP_SELECT" : step,
+        "STEP_DEGREES" : degrees,
     };
 
     $.ajax({
@@ -262,7 +262,7 @@ function closeFullscreen() {
 
 <div id="focus_controller_div" class="row justify-content-center" style="display: none;">
     <div class="col-sm-1"><button id="FOCUS_CCW" class="btn btn-primary">Focus -</button></div>
-    <div class="col-sm-2">{{ form_focuscontroller.STEP_SELECT(class='form-select bg-secondary') }}</div>
+    <div class="col-sm-2">{{ form_focuscontroller.STEP_DEGREES(class='form-select bg-secondary') }}</div>
     <div class="col-sm-1"><button id="FOCUS_CW" class="btn btn-danger">Focus +</button></div>
 </div>
 
@@ -286,7 +286,7 @@ $("#FOCUS_CCW").on("click", function() {
     $('#FOCUS_CW').prop("disabled", true);
     $('#FOCUS_CCW').removeClass("btn-primary");
     $('#FOCUS_CW').removeClass("btn-danger");
-    focuserMove('ccw', $('#STEP_SELECT').val());
+    focuserMove('ccw', $('#STEP_DEGREES').val());
 });
 
 $("#FOCUS_CW").on("click", function() {
@@ -295,7 +295,7 @@ $("#FOCUS_CW").on("click", function() {
     $('#FOCUS_CW').prop("disabled", true);
     $('#FOCUS_CCW').removeClass("btn-primary");
     $('#FOCUS_CW').removeClass("btn-danger");
-    focuserMove('cw', $('#STEP_SELECT').val());
+    focuserMove('cw', $('#STEP_DEGREES').val());
 });
 
 
