--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -23,7 +23,7 @@ var refreshInterval = 5000;
 var zoom = 2;  // 2 is no zoom
 var blur_score = 0.0
 var fullscreen = false;  //initial state
-var degrees_offset = 0;
+var steps_offset = 0;
 
 
 async function loop() {
@@ -155,9 +155,9 @@ function focuserMove(direction, degrees) {
             $('#FOCUS_CCW').prop("disabled", false);
             $('#FOCUS_CW').prop("disabled", false);
 
-            degrees_offset += json_data['degrees'];
+            steps_offset += json_data['steps'];
 
-            $('#offset_div').text(degrees_offset + " Degrees Offset");
+            $('#offset_div').text(steps_offset + " Steps Offset");
         },
         error: function(json_data){
             // Leave disabled on errors
@@ -270,7 +270,7 @@ function closeFullscreen() {
     <div class="col-sm-1"><button id="FOCUS_CCW" class="btn btn-primary">Focus -</button></div>
     <div class="col-sm-2">
         <div>{{ form_focuscontroller.STEP_DEGREES(class='form-select bg-secondary') }}</div>
-        <div id="offset_div">0 Degrees Offset</div>
+        <div id="offset_div">0 Steps Offset</div>
     </div>
     <div class="col-sm-1"><button id="FOCUS_CW" class="btn btn-danger">Focus +</button></div>
 </div>
