--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -267,12 +267,12 @@ function closeFullscreen() {
 </div>
 
 <div id="focus_controller_div" class="row justify-content-center" style="display: none;">
-    <div class="col-sm-1"><button id="FOCUS_CCW" class="btn btn-primary">Focus -</button></div>
+    <div class="col-sm-1"><button id="FOCUS_CCW" class="btn btn-primary">Focus<br>-</button></div>
     <div class="col-sm-2">
         <div>{{ form_focuscontroller.STEP_DEGREES(class='form-select bg-secondary') }}</div>
         <div id="offset_div">0 Steps Offset</div>
     </div>
-    <div class="col-sm-1"><button id="FOCUS_CW" class="btn btn-danger">Focus +</button></div>
+    <div class="col-sm-1"><button id="FOCUS_CW" class="btn btn-danger">Focus<br>+</button></div>
 </div>
 
 
