--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3062,6 +3062,30 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_RAW_FOLDER.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FILETRANSFER__REMOTE_RAW_FOLDER(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_RAW_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">Remote folder to store RAW images</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__REMOTE_FITS_FOLDER.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FILETRANSFER__REMOTE_FITS_FOLDER(class='form-control bg-secondary') }}
+            <div id="FILETRANSFER__REMOTE_FITS_FOLDER-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">Remote folder to store FITS images</div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.FILETRANSFER__REMOTE_VIDEO_FOLDER.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -3161,6 +3185,32 @@
             </div>
         </div>
         <div class="col-sm-8">Enable metadata uploads (requires image uploads to be enabled)</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__UPLOAD_RAW.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.FILETRANSFER__UPLOAD_RAW(class='form-check-input') }}
+                <div id="FILETRANSFER__UPLOAD_RAW-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Enable RAW uploads</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FILETRANSFER__UPLOAD_FITS.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.FILETRANSFER__UPLOAD_FITS(class='form-check-input') }}
+                <div id="FILETRANSFER__UPLOAD_FITS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Enable FITS uploads</div>
     </div>
 
     <div class="form-group row">
@@ -4313,6 +4363,8 @@ const field_names = [
     'FILETRANSFER__REMOTE_PANORAMA_VIDEO_FOLDER',
     'FILETRANSFER__REMOTE_METADATA_NAME',
     'FILETRANSFER__REMOTE_METADATA_FOLDER',
+    'FILETRANSFER__REMOTE_RAW_FOLDER',
+    'FILETRANSFER__REMOTE_FITS_FOLDER',
     'FILETRANSFER__REMOTE_VIDEO_FOLDER',
     'FILETRANSFER__REMOTE_KEOGRAM_FOLDER',
     'FILETRANSFER__REMOTE_STARTRAIL_FOLDER',
@@ -4434,6 +4486,8 @@ const checkbox_field_names = [
     'ORB_PROPERTIES__RETROGRADE',
     'FILETRANSFER__CERT_BYPASS',
     'FILETRANSFER__UPLOAD_METADATA',
+    'FILETRANSFER__UPLOAD_RAW',
+    'FILETRANSFER__UPLOAD_FITS',
     'FILETRANSFER__UPLOAD_VIDEO',
     'FILETRANSFER__UPLOAD_KEOGRAM',
     'FILETRANSFER__UPLOAD_STARTRAIL',
