--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4149,11 +4149,11 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.DEWHEATER__CLASSNAME.label(class='col-form-label') }}
+            {{ form_config.DEW_HEATER__CLASSNAME.label(class='col-form-label') }}
         </div>
         <div class="col-sm-3">
-            {{ form_config.DEWHEATER__CLASSNAME(class='form-select bg-secondary') }}
-            <div id="DEWHEATER__CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.DEW_HEATER__CLASSNAME(class='form-select bg-secondary') }}
+            <div id="DEW_HEATER__CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-7">
         </div>
@@ -4161,11 +4161,11 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.DEWHEATER__PIN_1.label(class='col-form-label') }}
+            {{ form_config.DEW_HEATER__PIN_1.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.DEWHEATER__PIN_1(class='form-control bg-secondary') }}
-            <div id="DEWHEATER__PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.DEW_HEATER__PIN_1(class='form-control bg-secondary') }}
+            <div id="DEW_HEATER__PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
             <div>Example: D12</div>
@@ -4174,12 +4174,25 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.DEWHEATER__ENABLE_DAY.label }}
+            {{ form_config.DEW_HEATER__LEVEL_DEF.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.DEW_HEATER__LEVEL_DEF(class='form-control bg-secondary') }}
+            <div id="DEW_HEATER__LEVEL_DEF-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default duty cycle of PWM</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.DEW_HEATER__ENABLE_DAY.label }}
         </div>
         <div class="col-sm-2">
             <div class="form-switch">
-                {{ form_config.DEWHEATER__ENABLE_DAY(class='form-check-input') }}
-                <div id="DEWHEATER__ENABLE_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+                {{ form_config.DEW_HEATER__ENABLE_DAY(class='form-check-input') }}
+                <div id="DEW_HEATER__ENABLE_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
         <div class="col-sm-8">
@@ -4473,8 +4486,9 @@ const field_names = [
     'FOCUSER__GPIO_PIN_2',
     'FOCUSER__GPIO_PIN_3',
     'FOCUSER__GPIO_PIN_4',
-    'DEWHEATER__CLASSNAME',
-    'DEWHEATER__PIN_1',
+    'DEW_HEATER__CLASSNAME',
+    'DEW_HEATER__PIN_1',
+    'DEW_HEATER__LEVEL_DEF',
     'INDI_CONFIG_DEFAULTS',
     'INDI_CONFIG_DAY',
     'CONFIG_NOTE',
@@ -4558,7 +4572,7 @@ const checkbox_field_names = [
     'YOUTUBE__UPLOAD_PANORAMA_VIDEO',
     'LIBCAMERA__AWB_ENABLE',
     'LIBCAMERA__AWB_ENABLE_DAY',
-    'DEWHEATER__ENABLE_DAY',
+    'DEW_HEATER__ENABLE_DAY',
     'WEB_NONLOCAL_IMAGES',
     'WEB_LOCAL_IMAGES_ADMIN',
     'RELOAD_ON_SAVE',
