--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4200,6 +4200,45 @@
         </div>
     </div>
 
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__CLASSNAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-3">
+            {{ form_config.TEMP_SENSOR__CLASSNAME(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-7">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__PIN_1.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__PIN_1(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Example: D5</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__VAR_SLOT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__VAR_SLOT(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
 </div><!-- end devices tab -->
 
 </div>
@@ -4490,6 +4529,9 @@ const field_names = [
     'DEW_HEATER__CLASSNAME',
     'DEW_HEATER__PIN_1',
     'DEW_HEATER__LEVEL_DEF',
+    'TEMP_SENSOR__CLASSNAME',
+    'TEMP_SENSOR__PIN_1',
+    'TEMP_SENSOR__VAR_SLOT',
     'INDI_CONFIG_DEFAULTS',
     'INDI_CONFIG_DAY',
     'CONFIG_NOTE',
