add pin descriptions

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4102,7 +4102,7 @@
             <div id="FOCUSER__GPIO_PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Example: D17</div>
+            <div>Example: D17 (GPIO17 / Pin 11 Raspi)</div>
         </div>
     </div>
 
@@ -4115,7 +4115,7 @@
             <div id="FOCUSER__GPIO_PIN_2-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Example: D18</div>
+            <div>Example: D18 (GPIO18 / Pin 12 Raspi)</div>
         </div>
     </div>
 
@@ -4128,7 +4128,7 @@
             <div id="FOCUSER__GPIO_PIN_3-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Example: D27</div>
+            <div>Example: D27 (GPIO27 / Pin 13 Raspi)</div>
         </div>
     </div>
 
@@ -4141,7 +4141,7 @@
             <div id="FOCUSER__GPIO_PIN_4-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Example: D22</div>
+            <div>Example: D22 (GPIO22 / Pin 15 Raspi)</div>
         </div>
     </div>
 
@@ -4169,7 +4169,7 @@
             <div id="DEW_HEATER__PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Example: D12</div>
+            <div>Example: D12 (GPIO12 / Pin 32 Raspi)</div>
         </div>
     </div>
 
@@ -4223,7 +4223,7 @@
             <div id="TEMP_SENSOR__PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Example: D5</div>
+            <div>Example: D5 (GPIO5 / Pin 29 Raspi)</div>
         </div>
     </div>
 
