log data before conversion

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4225,6 +4225,7 @@
         </div>
         <div class="col-sm-8">
             <div>Example: D5 (GPIO5 / Pin 29 Raspi)</div>
+            <div>Unused for i2c devices</div>
         </div>
     </div>
 
