--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4231,6 +4231,19 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__I2C_ADDRESS.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__I2C_ADDRESS(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__I2C_ADDRESS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Hexidecimal address - Example: 0x77</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.TEMP_SENSOR__VAR_SLOT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -4534,6 +4547,7 @@ const field_names = [
     'TEMP_SENSOR__CLASSNAME',
     'TEMP_SENSOR__PIN_1',
     'TEMP_SENSOR__VAR_SLOT',
+    'TEMP_SENSOR__I2C_ADDRESS',
     'INDI_CONFIG_DEFAULTS',
     'INDI_CONFIG_DAY',
     'CONFIG_NOTE',
