--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4204,11 +4204,11 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__CLASSNAME.label(class='col-form-label') }}
+            {{ form_config.TEMP_SENSOR__A_CLASSNAME.label(class='col-form-label') }}
         </div>
         <div class="col-sm-3">
-            {{ form_config.TEMP_SENSOR__CLASSNAME(class='form-select bg-secondary') }}
-            <div id="TEMP_SENSOR__CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.TEMP_SENSOR__A_CLASSNAME(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__A_CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-7">
             <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Temperature-Sensors" class="text-decoration-none link-info" target="_blank">Temperature Sensor Wiki</a></div>
@@ -4217,11 +4217,65 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__PIN_1.label(class='col-form-label') }}
+            {{ form_config.TEMP_SENSOR__A_PIN_1.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__PIN_1(class='form-control bg-secondary') }}
-            <div id="TEMP_SENSOR__PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.TEMP_SENSOR__A_PIN_1(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__A_PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Example: D6 (GPIO6 / Pin 31 Raspi)</div>
+            <div>Unused for i2c devices</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__A_I2C_ADDRESS.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__A_I2C_ADDRESS(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__A_I2C_ADDRESS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Hexidecimal address - Example: 0x77</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__A_VAR_SLOT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__A_VAR_SLOT(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__A_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__B_CLASSNAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-3">
+            {{ form_config.TEMP_SENSOR__B_CLASSNAME(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__B_CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-7">
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Temperature-Sensors" class="text-decoration-none link-info" target="_blank">Temperature Sensor Wiki</a></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__B_PIN_1.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__B_PIN_1(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__B_PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
             <div>Example: D5 (GPIO5 / Pin 29 Raspi)</div>
@@ -4231,11 +4285,11 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__I2C_ADDRESS.label(class='col-form-label') }}
+            {{ form_config.TEMP_SENSOR__B_I2C_ADDRESS.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__I2C_ADDRESS(class='form-control bg-secondary') }}
-            <div id="TEMP_SENSOR__I2C_ADDRESS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.TEMP_SENSOR__B_I2C_ADDRESS(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__B_I2C_ADDRESS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
             <div>Hexidecimal address - Example: 0x77</div>
@@ -4244,11 +4298,11 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__VAR_SLOT.label(class='col-form-label') }}
+            {{ form_config.TEMP_SENSOR__B_VAR_SLOT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__VAR_SLOT(class='form-select bg-secondary') }}
-            <div id="TEMP_SENSOR__VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.TEMP_SENSOR__B_VAR_SLOT(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__B_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
         </div>
@@ -4544,10 +4598,14 @@ const field_names = [
     'DEW_HEATER__CLASSNAME',
     'DEW_HEATER__PIN_1',
     'DEW_HEATER__LEVEL_DEF',
-    'TEMP_SENSOR__CLASSNAME',
-    'TEMP_SENSOR__PIN_1',
-    'TEMP_SENSOR__VAR_SLOT',
-    'TEMP_SENSOR__I2C_ADDRESS',
+    'TEMP_SENSOR__A_CLASSNAME',
+    'TEMP_SENSOR__A_PIN_1',
+    'TEMP_SENSOR__A_VAR_SLOT',
+    'TEMP_SENSOR__A_I2C_ADDRESS',
+    'TEMP_SENSOR__B_CLASSNAME',
+    'TEMP_SENSOR__B_PIN_1',
+    'TEMP_SENSOR__B_VAR_SLOT',
+    'TEMP_SENSOR__B_I2C_ADDRESS',
     'INDI_CONFIG_DEFAULTS',
     'INDI_CONFIG_DAY',
     'CONFIG_NOTE',
