--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4244,11 +4244,11 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__A_VAR_SLOT.label(class='col-form-label') }}
+            {{ form_config.TEMP_SENSOR__A_USER_VAR_SLOT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__A_VAR_SLOT(class='form-select bg-secondary') }}
-            <div id="TEMP_SENSOR__A_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.TEMP_SENSOR__A_USER_VAR_SLOT(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__A_USER_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
         </div>
@@ -4298,11 +4298,11 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__B_VAR_SLOT.label(class='col-form-label') }}
+            {{ form_config.TEMP_SENSOR__B_USER_VAR_SLOT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__B_VAR_SLOT(class='form-select bg-secondary') }}
-            <div id="TEMP_SENSOR__B_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.TEMP_SENSOR__B_USER_VAR_SLOT(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__B_USER_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
         </div>
@@ -4600,11 +4600,11 @@ const field_names = [
     'DEW_HEATER__LEVEL_DEF',
     'TEMP_SENSOR__A_CLASSNAME',
     'TEMP_SENSOR__A_PIN_1',
-    'TEMP_SENSOR__A_VAR_SLOT',
+    'TEMP_SENSOR__A_USER_VAR_SLOT',
     'TEMP_SENSOR__A_I2C_ADDRESS',
     'TEMP_SENSOR__B_CLASSNAME',
     'TEMP_SENSOR__B_PIN_1',
-    'TEMP_SENSOR__B_VAR_SLOT',
+    'TEMP_SENSOR__B_USER_VAR_SLOT',
     'TEMP_SENSOR__B_I2C_ADDRESS',
     'INDI_CONFIG_DEFAULTS',
     'INDI_CONFIG_DAY',
