validators for thresholds

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4290,7 +4290,7 @@
             <div id="DEW_HEATER__THOLD_DIFF_LOW-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>If the difference is above the LOW threshold, the default level (above) is used</div>
         </div>
     </div>
 
