--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4097,11 +4097,11 @@
         <div class="col-sm-2">
             {{ form_config.FOCUSER__CLASSNAME.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-4">
             {{ form_config.FOCUSER__CLASSNAME(class='form-select bg-secondary') }}
             <div id="FOCUSER__CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-7">
+        <div class="col-sm-6">
             <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Focuser-Device" class="text-decoration-none link-info" target="_blank">Focuser Wiki</a></div>
         </div>
     </div>
@@ -4164,11 +4164,11 @@
         <div class="col-sm-2">
             {{ form_config.DEW_HEATER__CLASSNAME.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-4">
             {{ form_config.DEW_HEATER__CLASSNAME(class='form-select bg-secondary') }}
             <div id="DEW_HEATER__CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-7">
+        <div class="col-sm-6">
             <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Dew-Heater-Support" class="text-decoration-none link-info" target="_blank">Dew Heater Wiki</a></div>
         </div>
     </div>
@@ -4339,11 +4339,11 @@
         <div class="col-sm-2">
             {{ form_config.TEMP_SENSOR__A_CLASSNAME.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-4">
             {{ form_config.TEMP_SENSOR__A_CLASSNAME(class='form-select bg-secondary') }}
             <div id="TEMP_SENSOR__A_CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-7">
+        <div class="col-sm-6">
             <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Temperature-Sensors" class="text-decoration-none link-info" target="_blank">Temperature Sensor Wiki</a></div>
         </div>
     </div>
@@ -4393,12 +4393,12 @@
         <div class="col-sm-2">
             {{ form_config.TEMP_SENSOR__B_CLASSNAME.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-4">
             {{ form_config.TEMP_SENSOR__B_CLASSNAME(class='form-select bg-secondary') }}
             <div id="TEMP_SENSOR__B_CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-7">
-            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Temperature-Sensors" class="text-decoration-none link-info" target="_blank">Temperature Sensor Wiki</a></div>
+        <div class="col-sm-6">
+            <div></div>
         </div>
     </div>
 
