render support info to a div

--- a/indi_allsky/flask/templates/support_info.html
+++ b/indi_allsky/flask/templates/support_info.html
@@ -39,12 +39,15 @@ pre {
         <span class="badge pill bg-primary copy-clipboard" style="cursor: pointer;" data-clipboard-target="#support_info">Copy Info to Clipboard</span>
     </div>
 </div>
+
+<hr>
+
 <div class="row">
-  <pre>
     <div class="col-sm-12">
-        <textarea id="support_info" rows="25" cols="120"></textarea>
+      <pre>
+        <div id="support_info" style="background-color:#cccccc;">Loading...<br><br><br><br><br><br><br><br><br></div>
+      </pre>
     </div>
-  </pre>
 </div>
 
 <script>
