switch support info to textarea

--- a/indi_allsky/flask/templates/support_info.html
+++ b/indi_allsky/flask/templates/support_info.html
@@ -52,7 +52,7 @@ Support info can be pasted directly into an issue
 <div class="row">
     <div class="col-sm-12">
       <pre>
-        <div id="support_info" style="background-color:#cccccc;">Loading...<br><br><br><br><br><br><br><br><br></div>
+        <textarea id="support_info" rows="30" style="width:95%;background-color:#cccccc;">Loading...</textarea>
       </pre>
     </div>
 </div>
