--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1196,6 +1196,17 @@
         <div class="col-sm-8">ffmpeg output codec</div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TIMELAPSE_SKIP_FRAMES.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.TIMELAPSE_SKIP_FRAMES(class='form-select bg-secondary') }}
+            <div id="TIMELAPSE_SKIP_FRAMES-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Exclude frames at beginning of timelapse.  Gain changes between night and day cause bad exposures.</div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -4668,6 +4679,7 @@ const field_names = [
     'FFMPEG_BITRATE',
     'FFMPEG_VFSCALE',
     'FFMPEG_CODEC',
+    'TIMELAPSE_SKIP_FRAMES',
     'IMAGE_LABEL_SYSTEM',
     'TEXT_PROPERTIES__FONT_FACE',
     'TEXT_PROPERTIES__FONT_HEIGHT',
