--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1198,6 +1198,17 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.FFMPEG_EXTRA_OPTIONS.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FFMPEG_EXTRA_OPTIONS(class='form-control bg-secondary') }}
+            <div id="FFMPEG_EXTRA_OPTIONS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">ffmpeg extra options (not validated)</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.TIMELAPSE_SKIP_FRAMES.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -4679,6 +4690,7 @@ const field_names = [
     'FFMPEG_BITRATE',
     'FFMPEG_VFSCALE',
     'FFMPEG_CODEC',
+    'FFMPEG_EXTRA_OPTIONS',
     'TIMELAPSE_SKIP_FRAMES',
     'IMAGE_LABEL_SYSTEM',
     'TEXT_PROPERTIES__FONT_FACE',
