add log message

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1204,7 +1204,10 @@
             {{ form_config.FFMPEG_EXTRA_OPTIONS(class='form-control bg-secondary') }}
             <div id="FFMPEG_EXTRA_OPTIONS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">ffmpeg extra options (not validated)</div>
+        <div class="col-sm-6">
+            <div>ffmpeg extra options (not validated).</div>
+            <div>Example:<pre>-level 3.1</pre></div>
+        </div>
     </div>
 
     <div class="form-group row">
