--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2848,6 +2848,34 @@
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.HEALTHCHECK__DISK_USAGE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.HEALTHCHECK__DISK_USAGE(class='form-control bg-secondary') }}
+            <div id="HEALTHCHECK__DISK_USAGE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Percentage disk usage to issue a warning</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.HEALTHCHECK__SWAP_USAGE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.HEALTHCHECK__SWAP_USAGE(class='form-control bg-secondary') }}
+            <div id="HEALTHCHECK__SWAP_USAGE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Percentage swap usage to issue a warning</div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.ADMIN_NETWORKS_FLASK.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -4623,6 +4651,8 @@ const field_names = [
     'DETECT_STARS_THOLD',
     'DETECT_MASK',
     'LOGO_OVERLAY',
+    'HEALTHCHECK__DISK_USAGE',
+    'HEALTHCHECK__SWAP_USAGE',
     'LOCATION_NAME',
     'LOCATION_LATITUDE',
     'LOCATION_LONGITUDE',
