--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -162,7 +162,7 @@ function focuserMove(direction, degrees) {
             $('#offset_div').text(steps_offset + " Steps Offset");
         },
         error: function(json_data){
-            $('#focuser_controller_error').text(json_data['focuser_error']);
+            $('#focus_controller_error').text(json_data['focuser_error'][0]);
 
             // Leave disabled on errors
             //$('#FOCUS_CCW').addClass("btn-primary");
