--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4548,6 +4548,180 @@
         </div>
     </div>
 
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__CLASSNAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.FAN__CLASSNAME(class='form-select bg-secondary') }}
+            <div id="FAN__CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div><a href="" class="text-decoration-none link-info" target="_blank">Fan Wiki</a></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__PIN_1.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FAN__PIN_1(class='form-control bg-secondary') }}
+            <div id="FAN__PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Example: D13 (GPIO13 / Pin 33 Raspi)</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__LEVEL_DEF.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FAN__LEVEL_DEF(class='form-control bg-secondary') }}
+            <div id="FAN__LEVEL_DEF-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default duty cycle of PWM</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__ENABLE_NIGHT.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.FAN__ENABLE_NIGHT(class='form-check-input') }}
+                <div id="FAN__ENABLE_NIGHT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__THOLD_ENABLE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.FAN__THOLD_ENABLE(class='form-check-input') }}
+                <div id="FAN__THOLD_ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__TEMP_USER_VAR_SLOT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FAN__TEMP_USER_VAR_SLOT(class='form-select bg-secondary') }}
+            <div id="FAN__TEMP_USER_VAR_SLOT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__TARGET.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FAN__TARGET(class='form-control bg-secondary') }}
+            <div id="FAN__TARGET-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Target temperature</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__LEVEL_LOW.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FAN__LEVEL_LOW(class='form-control bg-secondary') }}
+            <div id="FAN__LEVEL_LOW-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__LEVEL_MED.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FAN__LEVEL_MED(class='form-control bg-secondary') }}
+            <div id="FAN__LEVEL_MED-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__LEVEL_HIGH.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FAN__LEVEL_HIGH(class='form-control bg-secondary') }}
+            <div id="FAN__LEVEL_HIGH-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__THOLD_DIFF_LOW.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FAN__THOLD_DIFF_LOW(class='form-control bg-secondary') }}
+            <div id="FAN__THOLD_DIFF_LOW-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>If the difference is above the LOW threshold, the default level (above) is used</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__THOLD_DIFF_MED.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FAN__THOLD_DIFF_MED(class='form-control bg-secondary') }}
+            <div id="FAN__THOLD_DIFF_MED-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.FAN__THOLD_DIFF_HIGH.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.FAN__THOLD_DIFF_HIGH(class='form-control bg-secondary') }}
+            <div id="FAN__THOLD_DIFF_HIGH-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div></div>
+        </div>
+    </div>
 
 </div><!-- end devices tab -->
 
@@ -4854,6 +5028,17 @@ const field_names = [
     'DEW_HEATER__THOLD_DIFF_LOW',
     'DEW_HEATER__THOLD_DIFF_MED',
     'DEW_HEATER__THOLD_DIFF_HIGH',
+    'FAN__CLASSNAME',
+    'FAN__PIN_1',
+    'FAN__LEVEL_DEF',
+    'FAN__TARGET',
+    'FAN__TEMP_USER_VAR_SLOT',
+    'FAN__LEVEL_LOW',
+    'FAN__LEVEL_MED',
+    'FAN__LEVEL_HIGH',
+    'FAN__THOLD_DIFF_LOW',
+    'FAN__THOLD_DIFF_MED',
+    'FAN__THOLD_DIFF_HIGH',
     'TEMP_SENSOR__A_CLASSNAME',
     'TEMP_SENSOR__A_PIN_1',
     'TEMP_SENSOR__A_USER_VAR_SLOT',
@@ -4951,6 +5136,8 @@ const checkbox_field_names = [
     'LIBCAMERA__AWB_ENABLE_DAY',
     'DEW_HEATER__ENABLE_DAY',
     'DEW_HEATER__THOLD_ENABLE',
+    'FAN__ENABLE_NIGHT',
+    'FAN__THOLD_ENABLE',
     'WEB_NONLOCAL_IMAGES',
     'WEB_LOCAL_IMAGES_ADMIN',
     'RELOAD_ON_SAVE',
