add fan wiki link

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4559,7 +4559,7 @@
             <div id="FAN__CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
-            <div><a href="" class="text-decoration-none link-info" target="_blank">Fan Wiki</a></div>
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Fan-Control" class="text-decoration-none link-info" target="_blank">Fan Wiki</a></div>
         </div>
     </div>
 
